diesel_compile_tests/tests/fail/ordering_functions_require_ord.stderr
error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::sql_types::SqlOrd` is not satisfied
  --> $DIR/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^ the trait `diesel::sql_types::SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
  ::: $DIESEL/src/expression/functions/aggregate_ordering.rs:32:16
   |
32 |     fn max<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                --------------- required by this bound in `diesel::dsl::max`
   |
   = note: required because of the requirements on the impl of `diesel::dsl::SqlOrdAggregate` for `diesel::sql_types::Bool`

error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::sql_types::SqlOrd` is not satisfied
  --> $DIR/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `diesel::sql_types::SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = note: required because of the requirements on the impl of `diesel::dsl::SqlOrdAggregate` for `diesel::sql_types::Bool`
   = note: required because of the requirements on the impl of `diesel::Expression` for `diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, stuff::columns::b>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::expression::functions::aggregate_ordering::max::max<diesel::sql_types::Bool, stuff::columns::b>>` for `stuff::table`

error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::sql_types::SqlOrd` is not satisfied
  --> $DIR/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^ the trait `diesel::sql_types::SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
  ::: $DIESEL/src/expression/functions/aggregate_ordering.rs:51:16
   |
51 |     fn min<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                --------------- required by this bound in `diesel::dsl::min`
   |
   = note: required because of the requirements on the impl of `diesel::dsl::SqlOrdAggregate` for `diesel::sql_types::Bool`

error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::sql_types::SqlOrd` is not satisfied
  --> $DIR/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `diesel::sql_types::SqlOrd` is not implemented for `diesel::sql_types::Bool`
   |
   = note: required because of the requirements on the impl of `diesel::dsl::SqlOrdAggregate` for `diesel::sql_types::Bool`
   = note: required because of the requirements on the impl of `diesel::Expression` for `diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, stuff::columns::b>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<diesel::expression::functions::aggregate_ordering::min::min<diesel::sql_types::Bool, stuff::columns::b>>` for `stuff::table`
